<resources>
    <string name="app_name">NewsApp</string>
    <string name="app_title">Utah News</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_articles">No Articles Found</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Utah News Settings</string>
    <string name="start_date">Start Date (yyyy-mm-dd)</string>
    <string name="settings_start_date_key" translatable="false">from-date</string>
    <string name="settings_start_date_default" translatable="false">2018-01-01</string>
    <string name="end_date">End Date (yyyy-mm-dd)</string>
    <string name="settings_end_date_key" translatable="false">to-date</string>
    <string name="settings_end_date_default" translatable="false">2018-12-12</string>
    <string name="order_by_label">Order of Results</string>
    <string name="settings_order_by_key" translatable="false">orderBy</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_newest_value</string>
    <string name="settings_order_by_newest_label">Newest First</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>
    <string name="settings_order_by_oldest_label">Oldest First</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>
    <string name="search_term">utah</string>
    <string name="show_tag_value">contributor</string>
</resources>
