<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:title="@string/start_date"
        android:defaultValue="@string/settings_start_date_default"
        android:inputType="date"
        android:key="@string/settings_start_date_key"
        android:selectAllOnFocus="true" />

    <EditTextPreference
        android:title="@string/end_date"
        android:defaultValue="@string/settings_end_date_default"
        android:inputType="date"
        android:key="@string/settings_end_date_key"
        android:selectAllOnFocus="true"/>

    <ListPreference
        android:title="@string/order_by_label"
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key" />

</PreferenceScreen>